--- a/s1105/src/main/resources/application.properties
+++ b/s1105/src/main/resources/application.properties
@@ -11,4 +11,8 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
 spring.datasource.username=scott
 spring.datasource.password=tiger
 
+# 파일업로드 용량 설정 #
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
+
 
