--- a/s1109/src/main/resources/application.properties
+++ b/s1109/src/main/resources/application.properties
@@ -15,5 +15,15 @@ spring.datasource.password=tiger
 spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
 
+# 이메일인증 설정 #
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=onulee74@gmail.com
+spring.mail.password=etqxggayefamkvoz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
 
 
