11월 19일 차트그리기,AOP,트랜잭션

--- a/s1109/src/main/resources/application.properties
+++ b/s1109/src/main/resources/application.properties
@@ -24,6 +24,12 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
+# 로그파일 저장 #
+logging.level.root=INFO
+logging.file.name=C:/logBackup/log01.log
+#logging.file.path=C:/logBackup/logs
+
+
 
 
 
