--- a/s1109/src/main/resources/application.properties
+++ b/s1109/src/main/resources/application.properties
@@ -6,10 +6,19 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # oracle DB 설정 #
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+#spring.datasource.username=scott
+#spring.datasource.password=tiger 
+
+# MyBatis log4j 설정 #
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/orcl
 spring.datasource.username=scott
 spring.datasource.password=tiger
+
+#MyBatis
+#mybatis.configuration.map-underscore-to-camel-case=true
 
 # 파일업로드 용량 설정 #
 spring.servlet.multipart.maxFileSize=10MB
